Done Teacher CRUD Profile, Classrooms, Courses

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=MyBladeApp
 APP_URL=http://localhost
 APP_ENV=local
 APP_DEBUG=false
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Ho_Chi_Minh
 
 DB_HOST=localhost
 DB_DATABASE=mysql
